--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "module": "index.ts",
   "type": "module",
+  "license": "ISC",
   "scripts": {
     "start": "bun --watch run index.ts"
   },
